--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem vindo</h1>
+    <p>Este site consome as informações da API do <a href="https://viacep.com.br/" target="_blank">ViaCEP</a>, que ao inserir um CEP com 8 digitos retorna os dados do endereço.</p>
 </div>
